# runner2

./: .cursorrules  .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
docs/: class_diagram.puml  dat_file_format.md  features.md  instructions.md
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  secret.rs
src/file/: mod.rs
src/launcher/: mod.rs
src/manifest/: mod.rs
src/network/: mod.rs
src/ui/: mod.rs
