[package]
name = "runner2"
version = "0.1.0"
edition = "2021"
description = "A launcher downloader and executor application"

[dependencies]
eframe = { version = "0.24.1", features = ["persistence"] }  # egui framework
reqwest = { version = "0.11", features = ["json", "stream"] }  # HTTP client
tokio = { version = "1.34", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON handling
zip = "0.6"  # ZIP file handling
directories = "5.0"  # Platform-specific paths
anyhow = "1.0"  # Error handling
log = "0.4"  # Logging
env_logger = "0.10"  # Logging implementation
byteorder = "1.5"  # Binary data handling
which = "5.0"  # Path finding
futures-util = "0.3.30"  # Async utilities
bytes = "1.0"  # Byte utilities
base64 = "0.21.5"
tempfile = "3.8"  # Temporary files
winapi = { version = "0.3", features = ["winuser"] }  # Windows API bindings

[dev-dependencies]
mockall = "0.12"  # Mocking for tests

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }  # Windows API bindings

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"  # Windows resource handling

# This is what prevents the console window from appearing
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[[bin]]
name = "runner2"
path = "src/main.rs"
windows_subsystem = "windows"  # This ensures no console window appears on Windows
